# incubyte_assesment

./: README.md
src/: pyproject.toml  string_calculator.py  test_string_calculator.py
